# woollama

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
docs/: architecture.md  build-log.md  configuration.md  conversations-api-design.md  core-extraction.md  dist-split.md  environment.md  extending.md  getting-started.md  index.md  naming.md  pattern-templating.md  patterns.md  requirements.txt  roadmap.md  rust-router-port.md  rust-transition.md  security.md  slice-e-mcp-server.md
examples/: routing_demo.py  routing_validation.py  status_demo.py
examples/mcp-convstore/: README.md  server.py
examples/mcp-hello/: README.md  probe_client.py  server.py
examples/mcp-textops/: README.md  server.py
examples/rest-convstore/: README.md  server.py
rust-stub/: lib.rs
src/woollama/: __init__.py  __main__.py  _version.py  auth.py  binding.py  claude_code.py  config.py  conversations.py  inferencers.py  managed_agents.py  manager.py  mcp_server.py  ollama_native.py  recipes.py  responses.py  router.py  tooling.py
src/woollama/core/: __init__.py  config.py  inference.py  inferencers.py  orchestrate.py
src/woollama/defaults/: mcp.json  recipes.toml
tests/: test_attach_by_key.py  test_claude_code.py  test_config.py  test_conversation_store_persistence.py  test_conversations.py  test_core_inference.py  test_core_is_server_free.py  test_core_models.py  test_core_orchestrate.py  test_hardening.py  test_http_store_provider.py  test_inferencers.py  test_integration.py  test_main.py  test_managed_agents.py  test_manager.py  test_mcp_server.py  test_mcp_store_provider.py  test_ollama_native.py  test_recipes.py  test_responses.py  test_responses_stream.py  test_router.py  test_routing.py  test_smoke.py  test_store_backend.py  test_surface_auth.py
woollama-core/: .gitignore  Cargo.toml  README.md  pyproject.toml
woollama-core/python/woollama/: .gitkeep
woollama-core/src/: lib.rs
woollama-core/tests/: test_complete_conformance.py  test_orchestrate_conformance.py  test_registry_conformance.py
woollama-engine/: Cargo.toml
woollama-engine/src/: lib.rs
woollama-server/: Cargo.toml  README.md
woollama-server/defaults/: recipes.toml
woollama-server/src/: auth.rs  binding.rs  claude_code.rs  config.rs  conversations.rs  fabric.rs  lib.rs  main.rs  managed_agents.rs  mcp_registry.rs  mcp_surface.rs  ollama_native.rs  pattern_backend.rs  responses.rs
woollama-server/tests/: binding.rs  claude_code.rs  conversations.rs  defaults_sync.rs  discovery.rs  fabric_patterns.rs  fabric_proxy.rs  fabric_resilience.rs  fabric_vision.rs  http.rs  managed_agents.rs  managed_agents_race.rs  mcp_surface.rs  native_multimodal.rs  orchestrate.rs  store_backed.rs  streaming.rs  surface_auth.rs  w1_patterns.rs
