# Cargo workspace root for the Rust port of the woollama router service
# (see docs/rust-router-port.md). Members:
#   woollama-core   — the engine cdylib/wheel (today; becomes a pure rlib in slice 1)
#   woollama-server — the crate that builds the `woollamad` router daemon (grows from slice 2)
# The root `woollama` package below stays as the crates.io-name placeholder.
[workspace]
members = ["woollama-engine", "woollama-core", "woollama-server"]
resolver = "2"

[package]
name = "woollama"
version = "0.0.1"
edition = "2021"
description = "Web Over Ollama (and Llamas) — an MCP + OpenAI router. Placeholder; Python implementation in src/woollama/."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/teaguesterling/woollama"
repository = "https://github.com/teaguesterling/woollama"
keywords = ["mcp", "openai", "ollama", "router", "llm"]
categories = ["api-bindings"]

[lib]
name = "woollama"
path = "rust-stub/lib.rs"
