[project]
name = "woollama"
version = "0.1.0"
description = "Web Over Ollama (and Llamas) — an MCP + OpenAI router for AI desktops."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Teague Sterling" },
]
keywords = ["mcp", "openai", "ollama", "router", "ai", "llm", "fabric"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "openai>=1.0",        # for client-side integration tests
    "fastmcp>=2.0",       # for the bundled hello example server
    "ruff",
]

[project.scripts]
woollama = "woollama.__main__:main"

[project.urls]
Homepage = "https://github.com/teaguesterling/woollama"
Documentation = "https://github.com/teaguesterling/woollama/tree/main/docs"
Issues = "https://github.com/teaguesterling/woollama/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/woollama"]

[tool.hatch.build.targets.sdist]
include = [
    "src/woollama",
    "docs",
    "examples",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]   # line length handled by formatter
