[project]
name = "woollama"
version = "0.5.1"
description = "Web Over Ollama (and Llamas) — an MCP + OpenAI router for AI desktops."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Teague Sterling" },
]
keywords = ["mcp", "openai", "ollama", "router", "ai", "llm", "fabric"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "mcp>=1.0",
    # The Rust engine: provides `woollama.core` (complete*/orchestrate*/ModelRegistry).
    # `woollama` is a PEP 420 namespace shared between this dist and woollama-core.
    "woollama-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",  # for async test functions
    "openai>=1.0",           # for client-side integration tests
    "fastmcp>=2.0",          # for the bundled hello example server
    "ruff",
]
agents = [
    "anthropic>=0.107.1",
]

[project.scripts]
woollama = "woollama.__main__:main"

[project.urls]
Homepage = "https://github.com/teaguesterling/woollama"
Documentation = "https://woollama.readthedocs.io/"
Issues = "https://github.com/teaguesterling/woollama/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Dev: build the Rust core from the in-repo crate (editable). For a release this is
# replaced by a published `woollama-core` wheel on PyPI.
[tool.uv.sources]
woollama-core = { path = "woollama-core", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/woollama"]

# Include the bundled default config files so importlib.resources can find
# them when the package is installed from a wheel.
[tool.hatch.build.targets.wheel.force-include]
"src/woollama/defaults/mcp.json"     = "woollama/defaults/mcp.json"
"src/woollama/defaults/recipes.toml" = "woollama/defaults/recipes.toml"

[tool.hatch.build.targets.sdist]
include = [
    "src/woollama",
    "docs",
    "examples",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]   # line length handled by formatter

[tool.pytest.ini_options]
addopts = "-m 'not integration'"     # default: skip live tests; opt in with -m integration
markers = [
    "integration: live tests against a real Ollama and the bundled MCP servers",
]
asyncio_mode = "auto"                # @pytest.mark.asyncio not needed on async tests
