[package]
name = "woollama-core"
version = "0.4.0"
edition = "2021"
description = "The embeddable woollama model-management core (Rust) — start of the v1.0 port."
license = "MIT"

[lib]
name = "woollama_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
pythonize = "0.23"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
