[package]
name = "woollama-core"
version = "0.4.0"
edition = "2021"
description = "The embeddable woollama model-management core (Rust) — start of the v1.0 port."
license = "MIT"

[lib]
name = "woollama_core"
crate-type = ["cdylib"]

[dependencies]
# The pure-Rust engine (no pyo3) lives in woollama-engine now; this crate is just
# the thin PyO3 wrapper that wires it to Python (InferenceError, PyToolProvider, the
# async-iterator pyclasses, the pyfunctions).
woollama-engine = { path = "../woollama-engine" }
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
pythonize = "0.23"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
futures = "0.3"
async-trait = "0.1"
