[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "woollama-core"
version = "0.4.0"
description = "The embeddable woollama model-management core (Rust) — start of the v1.0 port."
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
# Pure-Rust extension; the module is the Cargo lib name (woollama_core).
strip = true

[tool.pytest.ini_options]
# Self-contained: don't inherit the parent woollama pyproject's pytest config.
testpaths = ["tests"]
