[package]
name = "woollama-engine"
version = "0.4.0"
edition = "2021"
description = "The pure-Rust woollama engine (no PyO3): inferencer registry, complete/stream, the recipe<->tool orchestrate loop. Consumed by the woollama-core wheel and the woollama-server binary."
license = "MIT"

[lib]
name = "woollama_engine"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "0.8"
