[package]
name = "woollama-engine"
version = "0.4.1"
edition = "2021"
description = "The pure-Rust woollama engine (no PyO3): inferencer registry, complete/stream, the recipe<->tool orchestrate loop. Consumed by the woollama-core wheel and the woollamad daemon (woollama-server crate)."
license = "MIT"
repository = "https://github.com/teaguesterling/woollama"
keywords = ["mcp", "openai", "ollama", "llm", "inference"]
categories = ["asynchronous", "api-bindings"]

[lib]
name = "woollama_engine"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"
# rustls (not native-tls/OpenSSL): pure-Rust TLS so woollama-core's wheels cross-compile
# cleanly (incl. aarch64) without a system OpenSSL. `native-roots` keeps the system trust
# store, matching the previous native-tls behavior.
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls-native-roots", "http2", "charset"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "0.8"
