[package]
name = "woollama-server"
version = "0.4.0"
edition = "2021"
description = "The woollama router service (Rust) — axum HTTP surface over woollama-engine."
license = "MIT"

[lib]
name = "woollama_server"
path = "src/lib.rs"

[[bin]]
name = "woollama-server"
path = "src/main.rs"

[dependencies]
woollama-engine = { path = "../woollama-engine" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
# 0.13 to match rmcp's reqwest (so reqwest::Client unifies with rmcp's HTTP client impl).
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
# MCP: downstream servers as rmcp child-process clients (slice 4) + the stdio test
# fixture (server side). transport-io gives the stdio (stdin/stdout) server transport.
rmcp = { version = "1.7", features = ["client", "server", "macros", "reqwest", "transport-child-process", "transport-async-rw", "transport-io", "transport-streamable-http-server", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
async-trait = "0.1"
futures = "0.3"
toml = "0.8"
# Generated SSE streams (native NDJSON->SSE, streaming orchestration, Responses streaming).
async-stream = "0.3"
bytes = "1"
# claude-code executor: temp cwd + delegate-mcp.json (run_completion/run_delegated).
tempfile = "3"

[[bin]]
name = "mcp_fixture"
path = "src/bin/mcp_fixture.rs"

# A fake `claude` CLI for hermetic claude-code tests (WOOLLAMA_CLAUDE_BIN points here).
[[bin]]
name = "fake_claude"
path = "src/bin/fake_claude.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
tempfile = "3"
