[package]
name = "woollama-server"
version = "0.4.0"
edition = "2021"
description = "woollamad — the woollama router daemon (Rust): an OpenAI-compatible + MCP router over Ollama, cloud models, and Claude Code, built on axum + woollama-engine."
license = "MIT"
repository = "https://github.com/teaguesterling/woollama"
readme = "README.md"
keywords = ["mcp", "openai", "ollama", "router", "llm"]
categories = ["web-programming::http-server", "command-line-utilities"]

[lib]
name = "woollama_server"
path = "src/lib.rs"

# The router daemon. Package/lib stay `woollama-server`/`woollama_server`; the produced
# binary is `woollamad` (the service identity, distinct from the auxiliary `woollama` lib).
# `cargo install woollama-server` installs just this bin (the fixtures below are gated).
[[bin]]
name = "woollamad"
path = "src/main.rs"

[features]
# The two test-fixture binaries are gated behind this feature so a default `cargo install
# woollama-server` ships ONLY `woollamad`. The test suite enables it
# (`cargo test --features test-fixtures`); the `CARGO_BIN_EXE_*` envs the tests use are still
# set when the feature is on.
test-fixtures = []

[dependencies]
woollama-engine = { path = "../woollama-engine", version = "0.4.1" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
# 0.13 to match rmcp's reqwest (so reqwest::Client unifies with rmcp's HTTP client impl).
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
# MCP: downstream servers as rmcp child-process clients (slice 4) + the stdio test
# fixture (server side). transport-io gives the stdio (stdin/stdout) server transport.
rmcp = { version = "1.7", features = ["client", "server", "macros", "reqwest", "transport-child-process", "transport-async-rw", "transport-io", "transport-streamable-http-server", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
async-trait = "0.1"
futures = "0.3"
toml = "0.8"
# Generated SSE streams (native NDJSON->SSE, streaming orchestration, Responses streaming).
async-stream = "0.3"
bytes = "1"
# claude-code executor: temp cwd + delegate-mcp.json (run_completion/run_delegated).
tempfile = "3"

# Test fixtures — only built with `--features test-fixtures` (kept out of `cargo install`).
[[bin]]
name = "mcp_fixture"
path = "src/bin/mcp_fixture.rs"
required-features = ["test-fixtures"]

# A fake `claude` CLI for hermetic claude-code tests (WOOLLAMA_CLAUDE_BIN points here).
[[bin]]
name = "fake_claude"
path = "src/bin/fake_claude.rs"
required-features = ["test-fixtures"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
tempfile = "3"
